# stable-typeid

./: Cargo.toml
src/: lib.rs
stable-typeid-macro/: Cargo.toml
stable-typeid-macro/src/: lib.rs  util.rs
tests/: enum.rs  struct.rs
