[package]
name = "stable-typeid-macro"
version = "0.0.2"
edition = "2021"
license = "MIT"
description = "stable typeid macro"
authors = ["BERADQ <adqber123@outlook.com>"]
repository = "https://github.com/BERADQ/stable-typeid"

[dependencies]
proc-macro2 = { version = "1.0.79", features = ["proc-macro"] }
quote = { version = "1.0.35", features = ["proc-macro"] }
syn = { version = "2.0.58", features = ["parsing", "proc-macro"] }

[lib]
proc-macro = true
